--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   list-style: none;
   font-family: "Courier New", Courier, monospace;
+  color: #222;
 }
 
 main {
@@ -21,12 +22,12 @@ h3,
 h4 {
   text-align: center;
   padding: 0.6em 0 0.1em 0;
-  animation: show 2.5s ease;
+  animation: show 1.5s ease;
 }
 
 p {
   text-align: center;
-  animation: show 2.5s ease;
+  animation: show 1.5s ease;
 }
 
 a {
@@ -49,7 +50,7 @@ a:hover {
   padding: 0.4em 0.6em;
   display: inline-block;
   border-radius: 2px;
-  animation: open 1s ease-out;
+  animation: open 1s cubic-bezier(0.77, 0.51, 0.19, 1.17);
 }
 
 .github {
